# RedLayer

./: .gitignore  CONTRIBUTING.md  FRONTEND_SPEC.md  LICENSE  README.md  SECURITY.md  test.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: compliance.py  config.py  harness.py  main.py  schemas.py  store.py
backend/app/plugins/: detectors.py  generator.py  probes.py
docs/: architecture.md  backend-plan.md  backend-todo.md  frontend-plan.md  frontend-todo.md
docs/fair-lending/: QUICK-REFERENCE.md  README.md  hackathon-master-plan.md
frontend/: README.md
frontend/mocks/: finding_001.json  finding_002.json  finding_003.json  findings.json  retest_blocked.json  scan_complete.json  scan_complete_empty.json  scan_failed.json
frontend/src/core/: apiClient.ts  types.ts
pitch/: README.md  RedLayer-Pitch-Deck.pptx  pitch-deck.html  pitch-story.md
scripts/: build_pitch_deck_pptx.py
scripts/fair-lending/: README.md  starter_kit.py
