[project]
name = "redlayer"
version = "0.1.0"
description = "Deterministic prompt-injection red-team engine with pluggable domain verticals"
requires-python = ">=3.11"
dependencies = [
    # TODO(migration): add the garak scanner and the chosen web framework
    # (FastAPI recommended for async + CORS) once the engine is wired.
]

[project.optional-dependencies]
# Authoring-only: the Tavily client used to enrich injected-document fixtures.
# NOT installed for the demo/CI runtime, which is what lets the import-graph
# firewall test assert the scan path never imports it.
authoring = ["tavily-python>=0.5"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redlayer"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
