[project]
name = "redlayer-backend"
version = "0.1.0"
description = "garak-based red-teaming engine for the SMB loan underwriting agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "garak==0.10.2",
    "torch==2.2.2",
    "pydantic",
    "anthropic",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
